--- a/visualising-data.Rmd
+++ b/visualising-data.Rmd
@@ -300,17 +300,23 @@ frames_mean <- frames %>%
 frames_mean
 ```
 
-Now we can create the plot:
+In this case I'm using the `ciMean()` function from the **lsr** package to compute the 95% confidence intervals. Just so that you can see how this function works -- without all the additional complications from calling it within the `summarise()` operation -- here's a simple example. I'll generate 20 numbers from a normal distribution with true mean 100 and true standard deviation 15 (following the convention used for IQ scores), and then use the `ciMean()` function to calculate a 95% confidence interval:  
+```{r}
+fake_iq <- rnorm(n = 20, mean = 100, sd = 15)  # normally distributed data
+lsr::ciMean(fake_iq)                           # 95% confidence interval 
+```
+
+So the `lower` variable in `frames_mean` is the lower bound on the 95% confidence interval, and `upper` is the upper bound. In any case, now that we have data in an appropriate format we can create the plot. This time around, however, I'll assign the results of my plotting function to a new variable `my_pic`
 
 ```{r}
 my_pic <- frames_mean %>%
-  ggplot(aes(x=test_item,y=mean_response,colour=condition)) +
+  ggplot(aes(x = test_item, y = mean_response, colour = condition)) +
   geom_point() +
-  geom_errorbar(aes(ymin=lower, ymax=upper)) +
-  facet_wrap(~ sample_size)
+  geom_errorbar(aes(ymin = lower, ymax = upper)) +
+  facet_wrap(~sample_size)
 ```
 
-Finally, we can draw it:
+Notice that this *doesn't* draw a plot. All the information about the plot is stored in the `my_pic` variable, but if we want to see it, we need to print or plot that variable (either on works). So to see what `my_pic` looks like, I do this:
 
 ```{r, fig.width=6, fig.height=4}
 my_pic
@@ -321,6 +327,8 @@ In this case, because the test items vary along a continuous scale, it's appropr
 ```{r, fig.width=6, fig.height=4}
 my_pic + geom_line()
 ```
+
+Notice that I can add `geom_line()` directly to `my_pic`. That can be extremely handy if you've worked out what the core features of your plot will be and want to play around with a few possible additions to the plot.
 
 ## Other possibilities
 
@@ -348,7 +356,7 @@ frames_small %>%
   ylim(0,9)
 ```
 
-Similarly, the plots are remarkably customisable in other ways. We can use `theme_dark()` to switch to a dark theme or `theme_bw()` to switch to a black and white scheme. We can add horizontal lines to plots with `geom_hline()`, vertical lines with `geom_vline()` and diagonal lines with `geom_abline()`. The colour palette can be adapted in arbitrary ways (e.g. with `scale_color_brewer`). We can control the axis scales with `xlim()` and `ylim()`. We can add text to a plot with `geom_text()`. Here's an example showing some of those customisation:
+Similarly, plots are remarkably customisable in other ways. We can use `theme_dark()` to switch to a dark theme or `theme_bw()` to switch to a black and white scheme. We can add horizontal lines to plots with `geom_hline()`, vertical lines with `geom_vline()` and diagonal lines with `geom_abline()`. The colour palette can be adapted in arbitrary ways (e.g. with `scale_color_brewer`). We can control the axis scales with `xlim()` and `ylim()`. We can add text to a plot with `geom_text()`. Here's an example showing some of those customisation:
 
 ```{r, fig.width=6, fig.height=4}
 my_new_pic <- my_pic + 
@@ -379,9 +387,7 @@ ggsave(
 
 The function is smart enough to guess from the `filename` argument what kind of image file to create (e.g., PNG, JPG, etc), and so as long as the filename specifies a file extension that `ggsave()` can handle it will automatically create the right kind of image. The result in this case is [this image file](./output/frame_pic.png).
 
-## More resources?
 
-This section is really just a beginning. 
 
 
 
